--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>ポートフォリオ</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-    <button onclick="showPage('profile')">プロフィール</button>
-    <button onclick="showPage('works')">リンク</button>
-    <button onclick="showPage('history')">経歴と資格</button>
+<header class="site-header">
+    <div class="nav-left">
+        <button onclick="showPage('profile')">プロフィール</button>
+        <button onclick="showPage('works')">リンク</button>
+        <button onclick="showPage('history')">経歴と資格</button>
+    </div>  
+    <div class="contact">
+        <i class="fa-brands fa-google"></i>
+        <span class="contact-text">@gmail.com</span>
+    </div>
 </header>
 
 <section id="profile" class="page active">
+    
     <h1>プロフィール</h1>
     <ul>出身：北海道札幌市</ul>
     <ul>大学：北海道科学大学 工学部 情報工学科</ul>
@@ -25,8 +33,12 @@
 
 <section id="works" class="page">
     <h1>リンク</h1>
-    <h2>GitHub</h2>
-    <ul><a href="https://github.com/retumika" target="_blank">GitHub アカウント</a></ul>
+    <ul>
+        <a href="https://github.com/retumika" target="_blank">
+            <i class="fa-brands fa-github"></i>
+            GitHub</a>
+    </ul>
+
 </section>
 
 <section id="history" class="page">
@@ -37,9 +49,9 @@
     <ul>漢語水平考試4級</ul>
     <h2>経歴</h2>
     <ul>SysHack 2026(ハッカソン)に参加予定</ul>
-
-
 </section>
+
+
 
 <script src="script.js"></script>
 </body>
