add: リンク先増やした

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ポートフォリオ</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     </div>  
     <div class="contact">
         <i class="fa-brands fa-google"></i>
-        <span class="contact-text">@gmail.com</span>
+        <span class="contact-text">retsumika@gmail.com</span>
     </div>
 </header>
 
@@ -37,6 +37,10 @@
         <a href="https://github.com/retumika" target="_blank">
             <i class="fa-brands fa-github"></i>
             GitHub</a>
+            <br>
+        <a href="https://x.com/retumika_yt" target="_blank">
+            <i class="fa-brands fa-x-twitter"></i>
+            旧twitter</a>
     </ul>
 
 </section>
