change:写真のディレクトリの変更

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
 
 <section id="profile" class="page active">
-    <img src="/a.png" class="profile-outer-photo" alt="プロフィール">
+    <img src="/portfoliobeta/images/a.png" class="profile-outer-photo" alt="プロフィール">
     <h1>プロフィール</h1>
     <ul>出身：北海道札幌市</ul>
     <ul>大学：北海道科学大学 工学部 情報工学科</ul>
