--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <h1>プロフィール</h1>
     <ul>出身：北海道札幌市</ul>
     <ul>大学：北海道科学大学 工学部 情報工学科</ul>
-    <ul>趣味：読書　おすすめの技術書は独習Cです！</ul>
+    <ul>趣味：旅行と読書　おすすめの技術書は独習Cです！</ul>
     <ul>アルバイト：古本屋</ul>
     <ul>メインでやっている言語：C言語</ul>
-    <ul>勉強中の言語：JavaScript、PHP</ul>
+    <ul>勉強中の言語：JavaScript</ul>
 </section>
 
 <section id="works" class="page">
